<resources>
    <string name="app_name">DB management</string>
    <string name="choiceOfAction">choose an action</string>
    <string name="buttonGet">Get</string>
    <string name="nameGet">To get data</string>
    <string name="requestButton">Execute</string>
    <string name="getRequestHint">request</string>
    <string name="buttonPost">Add</string>
    <string name="namePost">Add data</string>
    <string name="ptHintName">Name</string>
    <string name="ptHintDescription">Description</string>
    <string name="namePut">Change data</string>
    <string name="buttonPut">Change</string>

    <string name="buttonSearch">Search</string>
    <string name="searchName">Search</string>
    <string name="searchHint">starts with</string>
    <string name="searchInfoLoadingText">Loading</string>
    <string name="notFoundResult">no matches found</string>

    <string name="buttonDel">Delete</string>
    <string name="nameDel">Delete data</string>
    <string name="delRequestHint">request</string>

    <string name="hostNameTitle">Host</string>

    <string name="buttonSettings">open settings</string>
    <string name="buttonSettingsGetNameBot">test</string>
    <string name="nameBotNotAnswer">not found or not working</string>
    <string name="textButtonSaveSettings">save</string>
    <string name="saveSettingsToast">Settings saved</string>
    <string name="toastTextNotHost">not setting host</string>
    <string name="helpNameLabel">Help</string>
    <string name="helpText">  This application is intended for interacting with the <b>telegram-bot</b> database
        from this <a href="https://github.com/yarrou/TelegramBot">project</a>. The <b>"Add"</b> method adds a record to the database,
        the <b>"Get"</b> method allows you to see if there is a record in the database and the value that corresponds to it.
        The <b>"Delete"</b> and <b>"Change"</b> methods, respectively, completely delete the entry and change the value assigned to the entry.
        For the program to work, you must set the server address in the settings.
    About telegram bot: web application for managing your own travel telegram bot.
Technical task: It is necessary to create a web application for managing your own travel telegram bot.
1) The telegram bot gives the user background information about the entered city. For example, the user enters: "Moscow", chat-
the bot replies: "Don't forget to visit Red Square. Well, you don't have to go to Central Department Store))) ".
2) City data must be stored in a database.
3) It is necessary to manage data about cities (add new cities and information about them, change and delete any information) through the REST WebService.
Technologies used: SpringBoot, SpringMVC, SpringData,
Hibernate, Java 1.8 or higher. Maven is used to build the project.
City data is stored in the Postgresql database. Adding, editing and deleting data occurs through the REST WebService.</string>
    <string name="settingsHelpButton">show user manual</string>
    <string name="settingsHelpName">user guide</string>

    <string name="nameSettingsActivity">Settings</string>
    <string name="userAccountTitle">User account</string>
    <string name="logoutButtonText">Log out</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="nameTextSizeSettings">Text size</string>
    <string name="textSizeSmall">Small</string>
    <string name="textSizeNormal">Normal</string>
    <string name="textSizeLarge">Large</string>
    <string name="viewHelpOnStart">show description at program start</string>
    <string name="backupText">Backup</string>
    <string name="backupSaveText">create a backup along the path: /sdcard/ControllerForTelegramBot/</string>
    <string name="backupLoadText">select a file to restore from backup</string>
    <string name="backupToastSuccessfully">backup created : </string>
    <string name="authInfo">you are logged in as : </string>
    <string name="anonimous">you are not logged in, minimum of functions</string>

    <string name="viewCityNameLabel">City</string>

    <string name="error">Error</string>
    <string name="toastSelectFile">Select a File to Upload</string>
    <string name="toastNeedInstallFileManager">Please install a File Manager</string>
    <string name="toastLoading">Loading</string>

    <string name="action_share">Share</string>
    <string name="greeting">Hi, I am using the DB management app </string>

    <string name="backupActivityTitle">Restore settings</string>
    <string name="aboutRestoreSettings">The following settings will be restored: </string>
    <string name="nameBackupTitle">name</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="version">version : %s</string>
    <string name="version_app">application version : %s</string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="successfullyRestoreSettings">settings have been successfully applied</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="registration_offer">don\'t have an account yet?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="continue_offer">or continue without an account</string>
    <string name="continue_button_text">continue</string>

    <string name="registration_title">Registration</string>
    <string name="registration_email_prompt">your valid EMAIL</string>
    <string name="registration_password_length_prompt">at least five characters</string>
    <string name="registration_password_repeat_prompt">repeat the password</string>
    <string name="registration_button_text">Create an account</string>
    <string name="warning_passwords_don_t_match">passwords don\'t match</string>
    <string name="warning_password_is_too_short">the password must be at least 5 characters long</string>
    <string name="registration_success_message">you have successfully registered, log in</string>

    <string name="about_fragment_title">About app</string>
    <string name="about_fragment_update_textView">check for a new version</string>
    <string name="about_fragment_new_version_exist">a new version is available : %s</string>
    <string name="about_fragment_no_update">the latest version is used</string>
    <string name="about_fragment_button_update">update</string>
    <string name="about_fragment_button_download">download</string>
    <string name="about_fragment_download_description">Downloading %s</string>
    <string name="about_fragment_download_view">the file will be saved in Downloads</string>
    <string name="about_fragment_switch_auto_install">auto-installation</string>

    <string name="logging_fragment_title">Logging</string>
    <string name="logging_checkbox_title">save logs</string>
    <string name="logging_file_path">in %s file</string>
    <string name="size_logs">logs size %s</string>
    <string name="clear_logs">clear logs</string>

    <string name="request_permission_text">For the normal functioning of the application, it needs the rights to read and write information. This is necessary for functions such as creating a backup of settings and restoring from it, creating a file with logs, as well as for the ability to download and install an application update. Without granting this permission, further operation of the program is impossible.</string>
    <string name="request_permission_button">Grant permission</string>

    <string name="description_fragment_city_created_text">date of creation : %s</string>
    <string name="description_fragment_city_modify_text">date of modification : %s</string>
    <string name="is_unknown">is unknown</string>

    <string name="search_tab">Search</string>
    <string name="get_tab">Get</string>
    <string name="post_tab">Post</string>
    <string name="put_tab">Put</string>
    <string name="del_tab">Del</string>
</resources>