<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PutActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />


    <EditText
        android:id="@+id/putRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:ems="12"
        android:hint="@string/ptHintName" />

    <EditText
        android:id="@+id/putRequestDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:hint="@string/ptHintDescription"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/buttonPut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="@string/requestButton" />

    <TextView
        android:id="@+id/putResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

</LinearLayout>